# r4pm

./: .gitignore  Cargo.toml  README.md  build.rs  example.py  pyproject.toml  simple_example.ipynb  test_all.py
.github/workflows/: python310.yml  python311.yml  python312.yml  python313.yml  python314.yml  python37.yml  python38.yml  python39.yml
r4pm/: __init__.py  __init__.pyi  ocel_export.py  ocel_import.py  xes_export.py  xes_import.py
r4pm/df/: __init__.py  __init__.pyi  ocel_export.py  ocel_import.py  xes_export.py  xes_import.py
src/: lib.rs
src/ocel/: from_dataframe.rs  mod.rs  to_dataframe.rs
