[package]
name = "r4pm"
version = "0.2.17"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "r4pm"
crate-type = ["cdylib"]

[dependencies]
# process_mining = {version = "0.4.0", features = ["dataframes", "bindings"]}
process_mining = {version = "0.4.0", features = ["dataframes", "bindings", "ocel-sqlite"], path = "/home/aarkue/doc/projects/rust4pm/process_mining"}
pyo3 = {version = "0.25", features = [ "extension-module"]}
polars = {version = "0.51.0", features = ["dtype-slim","timezones","partition_by"]}
pyo3-polars = {version = "0.24.0", features = ["dtype-struct"]}
rayon = "1.7.0"
chrono = {version = "0.4.34", features = ["serde"] }
uuid = {version = "1.4.1", features = ["v4", "serde"]}
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
inventory = "0.3"

[build-dependencies]
serde_json = "1.0"
process_mining = {version = "0.4.0", features = ["dataframes", "bindings", "ocel-sqlite"], path = "/home/aarkue/doc/projects/rust4pm/process_mining"}
